# friendly

./: CLAUDE.md  README.md  Scraper-Guide.md  implementation_plan.md  scraper-guide-new.md
backend/: docker-compose.yml  pyproject.toml
backend/app/: config.py  main.py
backend/app/db/: neo4j.py  schema.py
backend/app/models/: dto.py
backend/app/routers/: chat.py  discover.py  ingest.py  jobs.py  webhooks.py
backend/app/services/: enrichment.py  graph.py  modulate.py  pioneer.py  pipeline.py  reka.py  scraper.py  yutori.py
backend/app/workers/: yutori_poller.py
enrichment/: start.sh
enrichment/browsing-service/: .env.example  pyproject.toml
enrichment/browsing-service/app/: config.py  main.py
enrichment/browsing-service/app/db/: neo4j.py
enrichment/browsing-service/app/models/: enrichment.py
enrichment/browsing-service/app/routers/: enrich.py
enrichment/browsing-service/app/services/: browsing.py  graph_writer.py
enrichment/n1-service/: .env.example  pyproject.toml
enrichment/n1-service/app/: config.py  main.py
enrichment/n1-service/app/db/: neo4j.py
enrichment/n1-service/app/models/: enrichment.py
enrichment/n1-service/app/routers/: enrich.py
enrichment/n1-service/app/services/: browser_agent.py  graph_writer.py  orchestrator.py  vision.py
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/lib/: api.ts  user-context.tsx
