[project]
name = "friendly-browsing-service"
version = "0.1.0"
description = "Tier 2 — Browsing enrichment microservice for Friendly"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "neo4j>=5.20.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
