[project]
name = "friendly-n1-service"
version = "0.1.0"
description = "Tier 3 — n1 deep enrichment microservice for Friendly"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "neo4j>=5.20.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "playwright>=1.40.0",
    "reka-api>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
